show internal map from context menus